Fixed most errors. Still "progress"

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
          </div>
        </div>
        <div class="list-group" id="transaction-table">
-         <button type="button" class="list-group-item" id="invID-{{eachItem.invID}}" ng-repeat='eachItem in currentTrans' ng-click="deleteClick($event);">{{eachItem.label}} #{{eachItem.amount}} ${{(eachItem.price * eachItem.amount).toFixed(2)}}</button>
-         <div class="alert alert-info" role="alert">Total: ${{total}}</div>
+         <button type="button" class="list-group-item" id="invID-{{eachItem.invID}}" ng-repeat='eachItem in current_transaction' ng-click="deleteClick($event);">{{eachItem.label}} #{{eachItem.amount}} ${{(eachItem.price * eachItem.amount).toFixed(2)}}</button>         <div class="alert alert-info" role="alert">Total: ${{total}}</div>
        </div>
      </div>
 </div>
