--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,33 @@
 <!doctype html>
 <html>
-<head lang="en">
-    <meta charset="utf-8">
-    <title>Cash Register</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
-    <script src="click.js"></script>
-    
-    
-
-</head>
-
-
-<body ng-app="buttons" ng-controller="buttonCtrl"> 
-<div class="container-fluid">
-    <h1>Cash Register (with buttons)</h1>
-    <div id="buttons" >
-       <div ng-repeat="button in buttons">
-         <div style="position:absolute;left:{{button.left}}px;top:{{button.top}}px"><button id="{{button.buttonID}}" ng-click="buttonClick($event,'button.buttonID','button.label',prices[buttonID].price);" >{{button.label}}</button></div>
-       </div>
-       <div style="position:fixed;height:50px;bottom:0px;left:0px;right:0px;margin-bottom:0px"} ng-show="errorMessage != ''">
-          <div class="col-sm-12">
-           <h3 class="text-danger">{{errorMessage}}</h3>
-         </div>
-       </div>
-       <div class="list-group" id="transaction-table">
-         <button type="button" class="list-group-item" id="id-{{eachItem.id}}" ng-repeat='eachItem in current_transaction' ng-click="deleteClick($event);">{{eachItem.label}} #{{eachItem.amount}} ${{(eachItem.price * eachItem.amount).toFixed(2)}}</button>         <div class="alert alert-info" role="alert">Total: ${{total}}</div>
-       </div>
-     </div>
-</div>
-
-
-</body>
+	<head lang="en">
+		<meta charset="utf-8">
+		<title>Cash Register</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
+		<script src="click.js"></script>
+	</head>
+	<body ng-app="buttons" ng-controller="buttonCtrl"> 
+		<div class="container-fluid">
+			<h1>Cash Register (with buttons)</h1>
+			<div id="buttons" >
+				<div ng-repeat="button in buttons">
+					<div style="position:absolute;left:{{button.left}}px;top:{{button.top}}px"><button id="{{button.buttonID}}" ng-click="buttonClick($event,'button.buttonID','button.label',prices[buttonID].price);" >{{button.label}}</button></div>
+				</div>
+			</div>
+			<h3 style="float:right">Items</h3>
+			<div style="float:right" id="priceList" class="priceList">
+				<TABLE class="itemTable">
+					<tr ng-repeat="item in currenT" ng-click="rowClick($event)"  id="{{item.id+100}}">
+						<td>{{item.label}}</td>
+						<td>{{item.Amount}}</td>
+						<td>${{item.price * item.Amount}}</td>
+						<span>Total:</span><span>${{total}}</span>
+					</tr>
+				</TABLE>
+			</div>
+			<div style="float:right" id="totalRow" class="totalRow"> 
+			</div>
+		</div>
+	</body>
 </html>
