--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
 		<script src="click.js"></script>
 	</head>
+	<style>
+	
+	table#table1 {
+	 background-color:border: 1px solid black;
+	 border: 1px solid black;
+	 position: relative;
+	}
+
+	</style>
+
 	<body ng-app="buttons" ng-controller="buttonCtrl"> 
 		<div class="container-fluid">
 			<h1>Cash Register (with buttons)</h1>
@@ -15,18 +25,15 @@
 					<div style="position:absolute;left:{{button.left}}px;top:{{button.top}}px"><button id="{{button.buttonID}}" ng-click="buttonClick($event,'button.buttonID','button.label',prices[buttonID].price);" >{{button.label}}</button></div>
 				</div>
 			</div>
-			<h3 style="float:right">Items</h3>
 			<div style="float:right" id="priceList" class="priceList">
-				<TABLE class="itemTable">
-					<tr ng-repeat="item in currenT" ng-click="rowClick($event)"  id="{{item.id+100}}">
-						<td>{{item.label}}</td>
-						<td>{{item.Amount}}</td>
-						<td>${{item.price * item.Amount}}</td>
-						<span>Total:</span><span>${{total}}</span>
+				<TABLE id="table1" class="itemTable">
+					<tr ng-repeat="item in currenT" ng-click="removeItem($event, 'item.buttonID')" id="{{item.buttonID}}">
+						<td id="{{item.buttonID}}">{{item.label}}</td>
+						<td id="{{item.buttonID}}">{{item.Amount}}</td>
+						<td id="{{item.buttonID}}">${{item.price * item.Amount}}</td>
+						<span>Total:</span><span>${{total}}</span> 
 					</tr>
 				</TABLE>
-			</div>
-			<div style="float:right" id="totalRow" class="totalRow"> 
 			</div>
 		</div>
 	</body>
